tests/parsing/smtlib/poly/errors/176_par_variable.expected
File "tests/parsing/smtlib/poly/errors/176_par_variable.psmt2", line 2, character 15-16:
2 | (assert (par ( _
                   ^
Error while parsing a non-empty list of type variables,
      read the reserved word '_',
      but expected a type variable.
